--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <!-- Styles -->
-  <link rel="stylesheet" href="/static/css/main.30613c29.css">
+  <link rel="stylesheet" href="/build/static/css/main.30613c29.css">
   <title>Needle</title>
 </head>
 
@@ -22,8 +22,8 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!-- Scripts -->
-  <script src="/static/js/787.4c8b65ad.chunk.js"></script>
-  <script src="/static/js/main.89447271.js"></script>
+  <script src="/build/static/js/787.4c8b65ad.chunk.js"></script>
+  <script src="/build/static/js/main.89447271.js"></script>
 </body>
 
 </html>
